# Assignment-Goat-Robotics

./: .gitignore  README.md
amr_ws/src/amr_controller/: CMakeLists.txt  package.xml
amr_ws/src/amr_controller/config/: amr_controllers.yaml
amr_ws/src/amr_controller/launch/: controller.launch.py
amr_ws/src/amr_custom_msg/: CMakeLists.txt  package.xml
amr_ws/src/amr_custom_msg/srv/: DelivarySignal.srv  GoalList.srv
amr_ws/src/amr_description/: CMakeLists.txt  package.xml
amr_ws/src/amr_description/launch/: display.launch.py  gazebo.launch.py  robot_state_publisher.launch.py
amr_ws/src/amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_ros2_control.xacro
amr_ws/src/amr_mapping/: CMakeLists.txt  package.xml
amr_ws/src/amr_navigation/: CMakeLists.txt  package.xml
amr_ws/src/amr_navigation/config/: nav2_dwb_params.yaml
amr_ws/src/amr_navigation/launch/: navigation.launch.py
amr_ws/src/amr_navigation/rviz/: navigation.rviz
amr_ws/src/amr_utils/: CMakeLists.txt  package.xml
amr_ws/src/amr_utils/amr_utils/: problem_five.py  problem_one.py  problem_seven.py  problem_six.py  problem_three.py  problem_two.py
